<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title Description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/title_text"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/cancel_button"
            android:backgroundTint="@color/button_light"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:id="@+id/ok_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/button_light"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_light"
            android:text="Remove"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/remove_button"
            android:layout_marginTop="8dp"/>
    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Description"
        android:id="@+id/description_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Make"
        android:id="@+id/make_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Model"
        android:id="@+id/model_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Serial Number"
        android:id="@+id/serial_number_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Estimated Value"
        android:id="@+id/estimated_value_edit_text"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Comment"
        android:id="@+id/comment_edit_text"
        android:inputType="text"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Purchase Date (yyyy/mm/dd)"
        android:id="@+id/purchase_date_edit_text"
        android:inputType="text" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/tags_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Tags will be dynamically added here -->
        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Tags"
        android:id="@+id/select_tags_button"
        android:backgroundTint="@color/button_dark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Scan Barcode"
        android:id="@+id/scan_barcode_button"
        android:layout_gravity="bottom|center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan Serial Number"
        android:id="@+id/scan_serial_button"
        android:layout_gravity="bottom|center_horizontal"/>

    <Button
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="Load Photo(s)"
        android:layout_gravity="bottom|center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/galleryFragmentContainer"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            android:orientation="vertical"/>
    </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>